@@ -5,6 +5,7 @@ Incompatible changes:
 
 * The deprecated AbstractMarkup API has been removed.
 * Python 3.2 is no longer supported.
+* The output now uses HTML5 instead of HTML4.
 
 Version 2.0.1, 2017-06-24
 =========================
